# tracking_rviz_plugin

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
scripts/: send_test_msgs.py
src/: detected_objects_display.cpp  detected_objects_display.h  detected_objects_pos_display.cpp  detected_objects_pos_display.h  object_display_common.cpp  object_display_common.h  tracked_objects_display.cpp  tracked_objects_display.h
src/visuals/: covariance_visual.h  mesh_node.h  object_visual.cpp  object_visual.h  text_node.h
