<?xml version="1.0"?>
<package format="2">
  <name>tracking_rviz_plugin</name>
  <version>0.0.0</version>
  <description>The tracking_rviz_plugin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jd@todo.todo">jd</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>spencer_social_relation_msgs</build_depend>
  <build_depend>spencer_human_attribute_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>spencer_tracking_msgs</exec_depend>
  <exec_depend>spencer_social_relation_msgs</exec_depend>
  <exec_depend>spencer_human_attribute_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
